* 移除服务脚手架功能
* 移除mybatis-starter模块
* 暂时移除Dew JDBC模块

.Fixed

* 修复指标采集内存溢出问题

.迁移指南（从1.3.4-RC到此版本）

* 配置变更： 拆分``dew.cluster.dist`` 为 ``dew.cluster.lock``和``dew.cluster.map``
* 配置变更： ``dew.cluster.election.config.election-period-sec`` to ``dew.cluster.config.election-period-sec``
* 功能变更： 领导者选举、分布式锁、分布式Map的实例化方式由 ``dew.cluster.election/lock/map`` 修改成 ``dew.cluster.election/lock/map.instance(...)``
* 功能变更： 移除服务脚手架，需要手工添加需要的接口服务
* 功能变更： 移除mybatis-starter模块，请使用mybatis官方方案
* 功能变更： swagger-ui.html 变更成 doc.html

=== 1.3.4-RC

.Features
* rabbitmq 增加topic exchange

=== 1.3.2-RC

.Features
* 去掉logback-es依赖，使用logstash从日志文件进行采集

=== 1.3.1-RC

.Fixed
* #93 修复mybatis-starter对于sharding-jdbc数据源的强制加载

=== 1.3.0-RC

.Features
* #87 局部使用sharding-jdbc，mybatis实现，增加mybatis-starter模块
* #89 支持配置提示
* #91 Dew实例加载机制优化

.Improvement
* #82 metrics指标增加线程、内存、cpu、磁盘等统计
* #86 ErrorController增加zuul日志追踪支持

.Fixed
* #92 修复logback-elasticsearch日志压力过大时导致的内存泄漏

.升级指南

. 修改pom.xml中dew版本号为1.3.0-RC
. 1.3.0-RC版本中已移除启动类配置，直接用``@SpringBootApplication``或``@SpringCloudApplication``
. 启动类需要的注解不要忘记自行添加，如``@EnableTransactionManagement``、`@EnableScheduling`
. 新增的mybatis-starter模块，详见使用说明

=== 1.2.2-RC

.Fixed

* #45 邮件通知修正
* #85 日志配置优化

=== 1.2.1-RC

.Fixed

* #38 RabbitMQ消息未设置持久化
* 使用 统一响应——协议无关 类型时，降级HTTP状态码改为500

=== 1.2.0-RC

.Feature

* #75 添加幂等处理功能， #77 可选策略类型Bloom Filter尚在开发中
* #72 实现针对服务整体及每个接口的TPS、最大/平均/90%响应时间Metrics统计

.Improvement

* #68 支持自定义离线文档文件名
* #70 更友好地获取本机Host
* #76 cluster.cache 支持更多类型的操作
* #53 统一响应——协议无关 降级由 `1000` 改成 `555` 以提升兼容性
* #79 增加是否启用默认文档配置
* #80 增加注解启用Dew功能
* Swagger文档去除全局token参数

.Fixed

* #43 swagger2markup-maven-plugin 在使用 spring.content-path 无效

.从 `1.1.0-RC` 迁移到 `1.2.0-RC`

. 使用 `统一响应——协议无关` 类型时，UI端由原来只需要获取200状态下的数据改成需要获取 200 和 555 状态下的数据，两者对UI端没有区别。( @See https://rep.360taihe.com/csp/dew-framework/issues/53 )

=== 1.1.0-RC

.Feature

* [功能] #45 支持服务调用（ `Hystrix` ）异常邮件通知
* [功能] #51 适配新版 `用户权限中心` SDK
* [功能] #59 #49 #15 统一日志规范，适配 `sleuth` 日志到 `ES`

.Improvement
