@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.tairanchina.csp.dew</groupId>
         <artifactId>parent-starter</artifactId>
-        <version>1.5.0-Beta4</version>
+        <version>1.5.0-Beta5</version>
         <relativePath>../../modules/parent-starter/</relativePath>
     </parent>
 
@@ -15,7 +15,7 @@
     <name>Dew Config</name>
     <description>Dew 配置中心服务</description>
     <packaging>jar</packaging>
-    <version>1.5.0-Beta4</version>
+    <version>1.5.0-Beta5</version>
 
     <properties>
     </properties>
