@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.tairanchina.csp.dew</groupId>
         <artifactId>build-starter</artifactId>
-        <version>1.5.0-Beta4</version>
+        <version>1.5.0-Beta5</version>
     </parent>
 
     <artifactId>docs</artifactId>
