@@ -8,7 +8,7 @@
     <artifactId>build-starter</artifactId>
     <name>Dew Build</name>
     <packaging>pom</packaging>
-    <version>1.5.0-Beta4</version>
+    <version>1.5.0-Beta5</version>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
